[gd_scene load_steps=12 format=3 uid="uid://ctv1pdtxhu54x"]

[ext_resource type="PackedScene" uid="uid://c48xots6jmqgk" path="res://misc_Testing_Scenes/Spawn_TesterStuffs/Spawn Pad.gltf" id="1_hl3gi"]
[ext_resource type="Script" path="res://misc_Testing_Scenes/Spawn_TesterStuffs/spawn_tester.gd" id="1_n5lnh"]
[ext_resource type="Animation" uid="uid://b0smlv7bj0go1" path="res://misc_Testing_Scenes/Spawn_TesterStuffs/SpawnPadAnimations/ButtonLocking.res" id="2_sbcir"]
[ext_resource type="Animation" uid="uid://cvrrm0ybj66yv" path="res://misc_Testing_Scenes/Spawn_TesterStuffs/SpawnPadAnimations/ButtonPressed.res" id="3_x0e6f"]
[ext_resource type="Animation" uid="uid://cydb1rlwbpddb" path="res://misc_Testing_Scenes/Spawn_TesterStuffs/SpawnPadAnimations/KillButtonPressed.res" id="4_f6xsv"]
[ext_resource type="Script" path="res://componets/InteractibleCode/Interact_SpawnMe.gd" id="6_ee5k6"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_whguw"]
height = 1.25
radius = 0.25

[sub_resource type="BoxShape3D" id="BoxShape3D_hjlqe"]
size = Vector3(1, 0.686901, 0.630438)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8msrp"]
_data = {
"ButtonLocking": ExtResource("2_sbcir"),
"ButtonPressed": ExtResource("3_x0e6f"),
"KillButtonPressed": ExtResource("4_f6xsv")
}

[sub_resource type="BoxShape3D" id="BoxShape3D_6tepa"]
size = Vector3(0.35, 0.190119, 0.35)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8ccxi"]
height = 0.12
radius = 0.14

[node name="SpawnTester" type="Node3D"]
script = ExtResource("1_n5lnh")

[node name="StaticBody3D" type="StaticBody3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.55, 0.625, 1.55)
shape = SubResource("CylinderShape3D_whguw")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.55, 0.625, 1.55)
shape = SubResource("CylinderShape3D_whguw")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.55, 0.625, -1.55)
shape = SubResource("CylinderShape3D_whguw")

[node name="CollisionShape3D4" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.55, 0.625, -1.55)
shape = SubResource("CylinderShape3D_whguw")

[node name="CollisionShape3D5" type="CollisionShape3D" parent="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.421854, 2.54884)
shape = SubResource("BoxShape3D_hjlqe")

[node name="SpawnPad" parent="." instance=ExtResource("1_hl3gi")]

[node name="AnimationPlayer2" type="AnimationPlayer" parent="SpawnPad"]
libraries = {
"SpawnPadAnimations": SubResource("AnimationLibrary_8msrp")
}

[node name="SpawnPoint" type="Node3D" parent="."]

[node name="TopButton" type="StaticBody3D" parent="."]
collision_layer = 4
script = ExtResource("6_ee5k6")

[node name="SpawnButton" type="CollisionShape3D" parent="TopButton"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.84718, 2.62639)
shape = SubResource("BoxShape3D_6tepa")

[node name="SideButton" type="StaticBody3D" parent="."]
collision_layer = 4
script = ExtResource("6_ee5k6")

[node name="ResetButton" type="CollisionShape3D" parent="SideButton"]
transform = Transform3D(0.847698, 0.428992, 0.312049, -0.0715194, 0.675291, -0.734076, -0.525636, 0.599957, 0.603124, 0.481247, 0.504128, 2.92569)
shape = SubResource("CylinderShape3D_8ccxi")

[node name="PressedTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="LockingTimer" type="Timer" parent="."]
wait_time = 1.8
one_shot = true

[node name="ResetingTimer" type="Timer" parent="."]
one_shot = true
